--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -55,6 +55,13 @@
     flex-direction: column;
     width: 33%;
     text-align: center;
+    align-items: center;
+  }
+
+  .challenge-text {
+    max-width: 262px;
+    text-align: center;
+   
   }
 
   .challenge-item-thumbnail {
@@ -113,12 +120,21 @@
 
     }
 
+    .challenge-text {
+      max-width: unset;
+      text-align: unset;
+
+    }
+
+    
+
     .challenge-item-thumbnail {
       flex-direction: row;
       width: 100%;
       font-size: 24px;
       justify-content: flex-start;
       text-align: left;
+      align-items: flex-start;
     }
 
 
