--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -129,6 +129,7 @@
     
 
     .challenge-item-thumbnail {
+      display: flex;
       flex-direction: row;
       width: 100%;
       font-size: 24px;
