--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -61,18 +61,15 @@
   .challenge-text {
     max-width: 262px;
     text-align: center;
-   
-  }
-
-  .challenge-item-thumbnail {
     font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 400;
     font-size: 25px;
     line-height: 30px;
     text-align: center;
     color: var(--white);
+   
   }
+
 
   .challenge-wrapper {
     padding: 30px 0;
@@ -136,6 +133,11 @@
       justify-content: flex-start;
       text-align: left;
       align-items: flex-start;
+    }
+
+    .challange-text {
+      font-size: 20px;
+      line-height: 24px;
     }
 
 
