--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -75,6 +75,16 @@
     padding: 30px 0;
   }
 
+  .challenge-item-description {
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: -0.02em;
+    color: var(--white);
+  }
+
 
 
   .button-wrapper {
@@ -94,8 +104,8 @@
   }
 
   .challenge-for-you .container .cta-btn:hover {
-    background: var(--regular-green);
-    border: 1px solid  var(--regular-green);
+    background: var(--white);
+    border: 1px solid  var(--white);
   }
 
 
