--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -130,6 +130,8 @@
     .challenge-text {
       max-width: unset;
       text-align: unset;
+      font-size: 20px;
+      line-height: 24px;
 
     }
 
@@ -145,9 +147,9 @@
       align-items: flex-start;
     }
 
-    .challange-text {
+    .challenge-item-description {
       font-size: 20px;
-      line-height: 24px;
+      line-height: 28px
     }
 
 
