--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -58,7 +58,7 @@
     align-items: center;
   }
 
-  .challenge-text {
+  .challenge-item-thumbnail .challenge-text {
     max-width: 262px;
     text-align: center;
     font-family: 'DM Sans';
@@ -127,7 +127,7 @@
 
     }
 
-    .challenge-text {
+    .challenge-item-thumbnail .challenge-text {
       max-width: unset;
       text-align: unset;
       font-size: 20px;
