--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -9,7 +9,7 @@
       <div class="challenge-item-and-desc">
         <div class="challenge-item-thumbnail">
           <img src="{{ challenge | asset_url | split: "*" | first }}" width="148" height="122" alt="">
-          <div class="chalenge-text">
+          <div class="challenge-text">
             {{ challenge | split: "*" | last }}
           </div>
         </div>    
