--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -111,6 +111,10 @@
 
 
   @media screen and (max-width: 768px) {
+
+   .challenge-for-you {
+    margin-top: 50px;
+   }
     .challenge-for-you-wrapper {
       padding-bottom: unset;
     }
