--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -38,7 +38,7 @@
   .challenge-for-you .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 60px;
+    font-size: clamp(45px 2vw, 60px);
     line-height: 35px;
     color: var(--white);
     padding-bottom: 30px;
