--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -63,7 +63,7 @@
     text-align: center;
     font-family: 'DM Sans';
     font-weight: 400;
-    font-size: 25px;
+    font-size: clamp(22px, 2vw, 25px);
     line-height: 30px;
     text-align: center;
     color: var(--white);
@@ -134,7 +134,6 @@
     .challenge-item-thumbnail .challenge-text {
       max-width: unset;
       text-align: unset;
-      font-size: 20px;
       line-height: 24px;
 
     }
