--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -141,6 +141,7 @@
     
 
     .challenge-item-thumbnail {
+      padding-top: 5vw;
       display: flex;
       flex-direction: row;
       width: 100%;
