--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -149,6 +149,7 @@
       justify-content: flex-start;
       text-align: left;
       align-items: flex-start;
+      gap: 2vw;
     }
 
     .challenge-item-description {
