--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -25,4 +25,5 @@ Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your g
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
 {% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Challenge Accepted!" %}
+{% render 'thirty-day-commitement' %}
 
