--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -5,6 +5,10 @@
       <h3><b>Celebrate your commitment!</b></h3>
     </div>
     <div class="commitement-for-you-wrapper">
+      <img class="commit-img" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
+      <div class="commitement-text">
+        When you finish the 30 days, you’ll be entered into <b>a raffle to win a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
+      </div>
       
     </div>
    
@@ -36,6 +40,17 @@
     flex-wrap: wrap;
     padding-bottom: 40px;
   }
+
+
+  .commitement-text {
+    font-family: 'DM Sans';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--dark-green);
+  }
+
+
 
  
 
