--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -7,7 +7,7 @@
     <div class="commitement-for-you-wrapper">
       <img class="commit-img" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
       <div class="commitement-text">
-        When you finish the 30 days, you’ll be entered into <b>a raffle to win a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
+        When you finish the 30 days, you’ll be entered into a raffle to win <b>a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
       </div>
       
     </div>
