--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -40,6 +40,10 @@
     padding: 0 120px 40px;  
   }
 
+  .commit-img img {
+    width: 40%;
+  }
+
 
   .commitement-text {
     font-family: 'DM Sans';
