--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -6,11 +6,12 @@
       <div class="sub-title">
         <h3><b>Celebrate your commitment!</b></h3>
       </div>
+      <div class="commit-sub-wrapper">
       <img class="commit-img" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
       <div class="commitement-text">
         When you finish the 30 days, you’ll be entered into a raffle to win <b>a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
       </div>
-      
+      </div>
     </div>
    
     
@@ -40,6 +41,10 @@
     display: flex;
     flex-direction: column;
     padding: 0 120px 40px;  
+  }
+
+  .commit-sub-wrapper {
+    display: flex;
   }
 
   .commit-img {
