--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -47,12 +47,12 @@
     display: flex;
   }
 
-  .commit-img {
+  .commit-sub-wrapper .commit-img {
     width: 40%;
   }
 
 
-  .commitement-text {
+  .commit-sub-wrapper .commitement-text {
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: 20px;
