--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -26,6 +26,8 @@
 
   .commitement-for-you-wrapper .sub-title {
     padding-top: 60px;
+    margin-bottom: unset;
+    padding-bottom: 20px;
   }
 
   .commitement-for-you-wrapper .sub-title h3 {
