--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -41,7 +41,8 @@
   .commitement-for-you-wrapper {
     display: flex;
     flex-direction: column;
-    padding: 0 188px 40px;  
+    width: 60%;
+    margin: 0 auto;
   }
 
   .commit-sub-wrapper {
@@ -49,7 +50,7 @@
   }
 
   .commit-sub-wrapper .commit-img {
-    max-width: 200px;
+    max-width: 20%;
   }
 
 
