--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -57,8 +57,7 @@
   .commit-sub-wrapper .commitement-text {
     font-family: 'DM Sans';
     font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: clamp(16px, 2vw, 20px);
     color: var(--dark-green);
   }
 
