--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -5,6 +5,7 @@
       
       <div class="sub-title">
         <h3><b>Celebrate your commitment!</b></h3>
+        <img class="commit-img-mb" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
       </div>
       <div class="commit-sub-wrapper">
       <img class="commit-img" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
@@ -51,6 +52,10 @@
 
   .commit-sub-wrapper .commit-img {
     max-width: 20%;
+  }
+
+  .sub-title .commit-img-mb {
+    display: none;
   }
 
 
