--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -26,6 +26,8 @@
   }
 
   .commitement-for-you-wrapper .sub-title {
+    display:flex;
+    justify-content: center;
     padding-top: 60px;
     margin-bottom: unset;
     padding-bottom: 20px;
@@ -69,6 +71,20 @@
   @media screen and (max-width: 768px) {
     .commitement-for-you-wrapper {
       padding-bottom: unset;
+    }
+
+
+
+    .commitement-for-you-wrapper .sub-title {
+      
+    }
+
+    .commit-sub-wrapper .commit-img {
+      display: none;
+    }
+
+    .sub-title .commit-img-mb {
+      display: block;
     }
 
     .commitement-for-you-wrapper .sub-title h3 {
