--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -84,7 +84,8 @@
     }
 
     .sub-title .commit-img-mb {
-      display: block;
+      display: inline-block;
+      max-width: 25%;
     }
 
     .commitement-for-you-wrapper .sub-title h3 {
