--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -71,6 +71,7 @@
   @media screen and (max-width: 768px) {
     .commitement-for-you-wrapper {
       padding-bottom: unset;
+      width: 100%;
     }
 
 
