--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -77,7 +77,7 @@
 
 
     .commitement-for-you-wrapper .sub-title {
-      
+      justify-content: space-between;
     }
 
     .commit-sub-wrapper .commit-img {
