--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -97,4 +97,10 @@
   
 
   }
+
+  @media screen and (max-width: 350px) {
+    .sub-title .commit-img-mb {
+      max-width: 25%;
+    }
+  }
 </style>
