--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -91,7 +91,7 @@
 
     .commitement-for-you-wrapper .sub-title h3 {
       text-align: left;
-      font-size: 32px;
+      font-size: clamp(30px, 2vw, 32px);
       line-height: 35px;
     }
   
@@ -100,7 +100,7 @@
 
   @media screen and (max-width: 350px) {
     .sub-title .commit-img-mb {
-      max-width: 25%;
+      max-width: 31%;
     }
   }
 </style>
