--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -14,7 +14,9 @@
       </div>
       </div>
     </div>
-   
+   <div class="commitment-we-proud">
+    We’re proud of you!
+   </div>
     
   </div>
 </div>
@@ -67,6 +69,11 @@
     font-weight: 400;
     font-size: clamp(16px, 2vw, 20px);
     color: var(--dark-green);
+  }
+
+  .commitment-we-proud {
+    display: flex;
+    justify-content: center;
   }
 
   @media screen and (max-width: 768px) {
