--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -74,6 +74,14 @@
   .commitment-we-proud {
     display: flex;
     justify-content: center;
+    background-image: url("{{ 'thirty-day-commit-swoosh.png' | asset_url }}");
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 50px;  
+    text-align: center;
+    letter-spacing: -0.02em;
+    color: var(--dark-green);
   }
 
   @media screen and (max-width: 768px) {
