--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -72,9 +72,9 @@
   }
 
   .commitment-we-proud {
-    display: flex;
-    justify-content: center;
     background-image: url("{{ 'thirty-day-commit-swoosh.png' | asset_url }}");
+    background-repeat: no-repeat;
+    background-position: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 45px;
