--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -75,9 +75,10 @@
     background-image: url("{{ 'thirty-day-commit-swoosh.png' | asset_url }}");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 400px;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 45px;
+    font-size: clamp(32px, 2vw, 45px);
     line-height: 50px;  
     text-align: center;
     letter-spacing: -0.02em;
