--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -75,7 +75,7 @@
     background-image: url("{{ 'thirty-day-commit-swoosh.png' | asset_url }}");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 400px;
+    background-size: contain;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: clamp(32px, 2vw, 45px);
