--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -111,6 +111,10 @@
       font-size: clamp(30px, 2vw, 32px);
       line-height: 35px;
     }
+
+    .commitment-we-proud {
+      line-height: 54px;
+    }
   }
 
   @media screen and (max-width: 350px) {
