--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -17,6 +17,7 @@
    <div class="commitment-we-proud">
     We’re proud of you!
    </div>
+   <div class="commitment-have-to-do">What do you have to do? </div>
     
   </div>
 </div>
@@ -85,6 +86,15 @@
     color: var(--dark-green);
   }
 
+  .commitment-have-to-do {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 28px; 
+    text-align: center;
+    color: var(--dark-green);
+  }
+
   @media screen and (max-width: 768px) {
     .commitement-for-you-wrapper {
       padding-bottom: unset;
@@ -114,6 +124,12 @@
 
     .commitment-we-proud {
       line-height: 54px;
+    }
+
+    .commitment-have-to-do {
+      text-align: left;
+      font-size: 20px;
+      line-height: 22px
     }
   }
 
