--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -93,6 +93,7 @@
     line-height: 28px; 
     text-align: center;
     color: var(--dark-green);
+    padding: 20px 0;
   }
 
   @media screen and (max-width: 768px) {
