--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -142,7 +142,7 @@
 
 
   .commitments .commitment .commitment-icon {
-    background: var(--light-green);
+    background: var(--peach);
     color: white;
     border-radius: 50%;
     min-width: 45px;
