--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1332,6 +1332,7 @@ body.compensate-for-scrollbar {
 	--light-orange: #FFC35A;
 	--red: #ED073E;
 	--vomit: #E8E8B0;
+	--peach:#F59E80;
 }
 footer {
 	.container {
