--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -151,9 +151,12 @@
 
 
    .commitments .commitment .commitment-text {
-    display: flex;
-    flex-direction: column;
-    max-width: 404px;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    color: var(--dark-green);
     padding-right: 75px;
   }
 
