--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -197,6 +197,10 @@
       font-size: 20px;
       line-height: 22px
     }
+
+    .commitments {
+      flex-direction: column;
+    }
      .commitment {
       flex-direction: column;
       max-width: unset;
