--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -198,6 +198,10 @@
       line-height: 22px
     }
 
+    .commitment-wrapper {
+      justify-content: flex-start;
+    }
+
     .commitments {
       flex-direction: column;
     }
