--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -152,7 +152,6 @@
 
    .commitments .commitment .commitment-text {
     font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 400;
     font-size: clamp(17px,2vw, 25px);
     line-height: 30px;
@@ -213,6 +212,7 @@
      .commitments .commitment .commitment-text {
       max-width: unset;
       line-height: unset;
+      padding-right: unset;
      
     }
   }
