--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -122,6 +122,7 @@
   .commitments {
     display: flex;
     padding-bottom: 30px;
+    max-width: 60%;
   }
 
  .commitments .commitment {
@@ -157,7 +158,7 @@
     font-size: clamp(20px,2vw, 25px);
     line-height: 30px;
     color: var(--dark-green);
-    padding-right: 75px;
+   
   }
 
 
@@ -204,6 +205,8 @@
 
     .commitments {
       flex-direction: column;
+      max-width: unset;
+      width: 100%;
     }
      .commitment {
       max-width: unset;
@@ -212,9 +215,7 @@
 
      .commitments .commitment .commitment-text {
       max-width: unset;
-      line-height: unset;
-      padding-right: unset;
-     
+      line-height: unset;   
     }
   }
 
