--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,12 +1,12 @@
 {% assign item_price = 67 %}
-<section id="challenge-section">
+<section id="challenge-features-section">
   <div class="container">
     <h3> Everything you need
     </h3>
     <p>to keep your blood sugar maintained:</p>
 
     <div class="features-wrapper">
-      <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
+      <img class="main-image" src="{{ 'thirty-day-challenge-features-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
       {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules): $75<sup>00</sup> Value 
         |<b>30 day mouth-watering meal plan</b> including recipes and videos: $29<sup>00</sup> Value
         |<b>14 day easy-to-do movement and exercise plan</b> with videos: $59<sup>00</sup> Value
@@ -40,19 +40,19 @@
 </section>
 
 <style>
-  #challenge-section .container {
+  #challenge-features-section .container {
     font-weight: bold;
     position: relative;
   }
 
-  #challenge-section {
+  #challenge-features-section {
     position: relative;
     color: var(--dark-green);
     padding: 50px 0;
     line-height: 1.2em;
   }
 
-  #challenge-section h3 {
+  #challenge-features-section h3 {
     font-family: 'PP Radio Grotesk';
     color: var(--dark-green);
     font-weight: 700;
@@ -67,7 +67,7 @@
     width: fit-content;
   }
 
-  #challenge-section p {
+  #challenge-features-section p {
     text-align: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
@@ -78,24 +78,24 @@
     color: var(--dark-green);
   }
 
-  #challenge-section .features-wrapper {
+  #challenge-features-section .features-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
   }
 
-  #challenge-section .main-image {
+  #challenge-features-section .main-image {
     max-width: 55%;
   }
 
-  #challenge-section .features {
+  #challenge-features-section .features {
     max-width: 45%;
     display: flex;
     flex-direction: column;
   }
 
-  #challenge-section .features .feature {
+  #challenge-features-section .features .feature {
     position: relative;
     display: flex;
     align-items: center;
@@ -107,11 +107,11 @@
    
   }
 
-  #challenge-section .features .feature:nth-child(8) {
+  #challenge-features-section .features .feature:nth-child(8) {
     border-bottom: unset;
   }
 
-  #challenge-section .features .feature .feature-icon {
+  #challenge-features-section .features .feature .feature-icon {
     background: var(--light-green);
     color: white;
     border-radius: 50%;
@@ -125,14 +125,14 @@
   }
 
 
-  #challenge-section .features .feature .feature-text {
+  #challenge-features-section .features .feature .feature-text {
     display: flex;
     flex-direction: column;
     max-width: 404px;
     padding-right: 75px;
   }
 
-  #challenge-section .features .feature .feature-price {
+  #challenge-features-section .features .feature .feature-price {
     width: 89px;
     position: absolute;
     right: 0;
@@ -194,45 +194,45 @@
   }
 
   @media screen and (max-width: 898px) {
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
       width: 73px;
   
     }
   }
 
   @media screen and (max-width: 768px) {
-    #challenge-section .container {
+    #challenge-features-section .container {
       padding: 0 15px;
     }
 
-    #challenge-section h3 {
+    #challenge-features-section h3 {
       font-size: 32px;
       line-height: 35px;
     }
 
-    #challenge-section p {
+    #challenge-features-section p {
       font-size: 29px;
       line-height: 24px;
     }
 
-    #challenge-section .main-image {
+    #challenge-features-section .main-image {
       position: relative;
       min-width: 140%;
       right: 20%;
       bottom: 0;
     }
 
-    #challenge-section .features {
+    #challenge-features-section .features {
       max-width: unset;
       width: 100%;
     }
 
-    #challenge-section .features .feature .feature-text {
+    #challenge-features-section .features .feature .feature-text {
       max-width: unset;
       padding-right: 92px;
     }
 
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
       width: 9vw;
     }
 
@@ -247,25 +247,25 @@
   }
 
   @media screen and (max-width: 627px) {
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
         width: 11vw;
     }
   }
 
   @media screen and (max-width: 513px) {
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
         width: 13vw;
     }
   }
 
   @media screen and (max-width: 434px) {
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
         width: 15vw;
     }
   }
 
   @media screen and (max-width: 376px) {
-    #challenge-section .features .feature .feature-price {
+    #challenge-features-section .features .feature .feature-price {
         width: 18vw;
     }
   }
