--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -26,8 +26,7 @@
 
 <section id="challenge-features-section">
   <div class="container">
-    <h3> Everything you need
-    </h3>
+    <h3>Everything you need</h3>
     <p>to keep your blood sugar maintained:</p>
 
     <div class="features-wrapper">
