--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,16 +1,3 @@
-{% if shop.name == "CuraLife" %}
-  {% assign supply_value = 75 %}
-  {% assign mealplan_value = 29 %}
-  {% assign exercise_value = 59 %}
-  {% assign infographic_value = 14 %}
-  {% assign cookbook_value = 40 %}
-  {% assign shipping_value = 8 %}
-  {% assign community_value = 0 %}
-  {% assign support_value = 0 %}
-{% elsif shop.name == "CuraLife Global" %}
-  {% assign curaeats_value = 24 %}
-{% endif %}
-
 {% assign item_price = 67 %}
 
 {% assign features = "<b>30 day supply of Curalin</b> (180 capsules)
@@ -22,7 +9,7 @@
 |<b>Community support</b> with 100K+ peers
 |<b>24/7 Customer Support</b>  (phone, email, or live chat)" | split: "|" %}
 
-{% assign prices = "75,29,59,14,40,8,0,0" %}
+{% assign prices = "75,29,59,14,40,8,0,0" | split %}
 
 <section id="challenge-features-section">
   <div class="container">
@@ -36,12 +23,8 @@
         {% for feature in features %}
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
-            <div class="feature-text">{{ feature | split: ":" | first }}</div>
-            {% if feature contains "Priceless" %}
-              <div class="feature-price" style="color: #95A157;">{{ feature | split: ":" | last }}</div>
-            {% else %}
-              <div class="feature-price">{{ feature | split: ":" | last }}</div>
-            {% endif %}
+            <div class="feature-text">{{ feature }}</div>
+            <div class="feature-price">{% if prices[forloop.index] == 0 %}Priceless{% else %}{{ prices[forloop.index] }}{% endif %}</div>
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
@@ -49,7 +32,6 @@
       </div>
       
       <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
-     
     </div>
   </div>
 </section>
