--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -9,7 +9,7 @@
 |<b>Community support</b> with 100K+ peers
 |<b>24/7 Customer Support</b>  (phone, email, or live chat)" | split: "|" %}
 
-{% assign prices = "75,29,59,14,40,8,0,0" | split %}
+{% assign prices = "75,29,59,14,40,8,0,0" | split: "," %}
 
 <section id="challenge-features-section">
   <div class="container">
