--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -24,7 +24,7 @@
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ feature }}</div>
-            <div class="feature-price">{% if prices[forloop.index] == 0 %}Priceless{% else %}{{ prices[forloop.index] }}{% endif %}</div>
+            <div class="feature-price">{% if prices[forloop.index - 1] == 0 %}Priceless{% else %}{{ prices[forloop.index] }}{% endif %}</div>
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
