--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -24,7 +24,7 @@
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ feature }}</div>
-            {% assign index = forloop.index | minus: 1 %}
+            {% assign index = forloop.index %}
             <script>console.log("{{ index }}")</script>
             <div class="feature-price">{% if prices[index] == 0 %}Priceless{% else %}{{ prices[forloop.index] }}{% endif %}</div>
           </div>
