--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,13 +1,13 @@
 {% assign item_price = 67 %}
 
-{% assign features = "<b>30 day supply of Curalin</b> (180 capsules),75
-|<b>30 day mouth-watering meal plan</b> including recipes and videos,29
-|<b>14 day easy-to-do movement and exercise plan</b> with videos,59
-|<b>Blood Sugar Explained</b> In Plain English (infographic),14
-|<b>Curalife Blood Sugar Healthy Cookbook</b>,40
-|<b>Free Shipping </b>,8
-|<b>Community support</b> with 100K+ peers,0
-|<b>24/7 Customer Support</b> (phone, email, or live chat),0" | split: "|" %}
+{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75
+|<b>30 day mouth-watering meal plan</b> including recipes and videos:29
+|<b>14 day easy-to-do movement and exercise plan</b> with videos:59
+|<b>Blood Sugar Explained</b> In Plain English (infographic):14
+|<b>Curalife Blood Sugar Healthy Cookbook</b>:40
+|<b>Free Shipping </b>:8
+|<b>Community support</b> with 100K+ peers:0
+|<b>24/7 Customer Support</b> (phone, email, or live chat):0" | split: "|" %}
 
 <section id="challenge-features-section">
   <div class="container">
