--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -6,8 +6,7 @@
 |<b>Blood Sugar Explained</b> In Plain English (infographic):14
 |<b>Curalife Blood Sugar Healthy Cookbook</b>:40
 |<b>Free Shipping </b>:8
-|<b>Community support</b> with 100K+ peers:0
-|<b>24/7 Customer Support</b> (phone, email, or live chat):0" | split: "|" %}
+|<b>Community support</b> with 100K+ peers:0|<b>24/7 Customer Support</b> (phone, email, or live chat):0" | split: "|" %}
 
 <section id="challenge-features-section">
   <div class="container">
