--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -133,6 +133,15 @@
     right: 0;
     color:  var(--dark-brown);
   }
+  
+  #challenge-features-section .features .feature .feature-price sup {
+    font-size: 10px;
+    position: relative;
+    top: 1px;
+    left: -2px;
+  }
+  
+
 
 
   .total-value {  
