--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -22,7 +22,11 @@
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ feature | split: ":" | first }}</div>
             {% assign price = feature | split: ":" | last %}
-            <div class="feature-price">{% if price == '0' %}Priceless{% else %}{{ price }}<sup>00</sup> Value{% endif %}</div>
+            {% if price == '0' %}
+            <div class="feature-price">Priceless</div>
+            {% else %}
+            <div class="feature-price"></div>{{ price | times: 100 | money_with_currency }}<sup>00</sup> Value</div>
+            {% endif %}
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
