--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -32,7 +32,7 @@
           {% assign total = total | plus: price %}
         {% endfor %}
         <div class="total-value">Total Value Before Discount: {{ total | times: 100 | money_without_trailing_zeros }} </div>
-        <div class="price-today">Your Price Today  <span class="rounded new-price">{{ item_price | times: 100.0 | money | replace: "GBP", "" }}</span></div>
+        <div class="price-today">Your Price Today  <span class="rounded new-price">{{ item_price | times: 100 | money_without_trailing_zeros }}</span></div>
       </div>
       
       <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
