--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -149,8 +149,6 @@
     position: relative;
     top: 1px;
   }
-  
-
 
 
   .total-value {  
@@ -178,6 +176,13 @@
     color: var(--dark-green);
 
   }
+
+ .price-today sup {
+    position: relative;
+    top: -11px; 
+    right: 2px
+  }
+
 
   .new-price {
     font-family: 'Poppins';
