--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -254,6 +254,12 @@
       width: 9vw;
     }
 
+    .price-today sup {
+      top: -11px; 
+      right: 2px
+    }
+  
+
      .cta-btn {
       margin-left: unset;
       bottom: -75px;
