--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -17,6 +17,7 @@
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
+{% render 'thirty-day-video-reviews' %}
 {% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Challenge Accepted!" %}
 {% render 'thirty-day-commitement' %}
 
